--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.12.1",
     "next": "^12.3.1",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.1.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
   },
