--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "axios": "^1.2.1",
     "mongodb": "^4.12.1",
     "next": "^12.3.1",
     "react": "18.2.0",
